@@ -1,4 +1,4 @@
-/* $XdotOrg: xc/programs/Xserver/miext/rootless/rootlessWindow.c,v 1.2 2004/04/23 19:54:27 eich Exp $ */
+/* $XdotOrg: xc/programs/Xserver/miext/rootless/rootlessWindow.c,v 1.3 2004/07/30 19:12:17 torrey Exp $ */
 /*
  * Rootless window management
  */
@@ -481,7 +481,7 @@ RootlessUnrealizeWindow(WindowPtr pWin)
 
 /*
  * RootlessReorderWindow
- *  Reorder the window associated with the given frame so that it's
+ *  Reorder the frame associated with the given window so that it's
  *  physically above the window below it in the X stacking order.
  */
 void
@@ -494,6 +494,15 @@ RootlessReorderWindow(WindowPtr pWin)
         RootlessWindowRec *newPrev;
         RootlessFrameID newPrevID;
         ScreenPtr pScreen = pWin->drawable.pScreen;
+
+        /* Check if the implementation wants the frame to not be reordered
+           even though the X11 window is restacked. This can be useful if
+           frames are ordered-in with animation so that the reordering is not
+           done until the animation is complete. */
+        if (SCREENREC(pScreen)->imp->DoReorderWindow) {
+            if (!SCREENREC(pScreen)->imp->DoReorderWindow(winRec))
+                return;
+        }
 
         RootlessStopDrawing(pWin, FALSE);
 
